browserify: add lodash and npm builder

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   },
   "scripts": {
     "start": "node app.js",
-    "debug": "node debug app.js"
+    "debug": "node debug app.js",
+    "front": "browserify -r react -r react-router -r newforms -r newforms-bootstrap -r lodash > assets/js/front/dependencies/build.js",
+    "admin": "browserify -r react -r react-router -r newforms -r newforms-bootstrap -r lodash > assets/js/admin/dependencies/build.js"
   },
   "main": "app.js",
   "repository": {
