--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rc-pagination": "latest",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
+    "react-motion": "^0.3.1",
     "react-router": "latest",
     "sails": "github:balderdashy/sails",
     "sails-disk": "~0.10.0",
