--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
     "history": "latest",
     "include-all": "~0.1.3",
     "lodash": "^3.10.1",
-    "moment": "^2.10.6",
     "newforms": "^0.13.2",
     "newforms-bootstrap": "^2.0.0",
     "passport-local": "^1.0.0",
     "rc": "~0.5.0",
     "rc-pagination": "latest",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
     "react-motion": "^0.3.1",
-    "react-router": "latest",
+    "react-router": "^1.0.1",
     "sails": "github:balderdashy/sails",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^5.0.1"
@@ -41,7 +40,8 @@
   "scripts": {
     "start": "node app.js",
     "debug": "node debug app.js",
-    "front": "browserify -r react -r react-dom -r react-router -r history -r newforms -r newforms-bootstrap -r lodash > assets/js/front/dependencies/build.js",
+    "postinstall": "npm run build-admin && npm run build-front",
+    "front": "browserify -r react -r react-dom -r react-router -r history -r newforms -r newforms-bootstrap -r lodash -r react-motion > assets/js/front/dependencies/build.js",
     "admin": "browserify -r react -r react-dom -r react-router -r history -r newforms -r newforms-bootstrap -r lodash > assets/js/admin/dependencies/build.js"
   },
   "main": "app.js",
@@ -50,5 +50,8 @@
     "url": "git://github.com/wi2/calendar-example.git"
   },
   "author": "Mike wi2",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "browserify": "^12.0.1"
+  }
 }
