--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "grunt-react": "^0.12.3",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
-    "history": "^1.13.1",
     "include-all": "~0.1.3",
     "lodash": "^3.10.1",
     "newforms": "^0.13.2",
@@ -32,7 +31,7 @@
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-motion": "^0.3.1",
-    "react-router": "latest",
+    "react-router": "^2.0.0",
     "sails": "github:balderdashy/sails",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^5.0.1",
@@ -42,8 +41,8 @@
     "start": "node app.js",
     "debug": "node debug app.js",
     "postinstall": "npm run admin && npm run front",
-    "front": "browserify -r react -r react-dom -r react-router -r history -r newforms -r newforms-bootstrap -r lodash -r react-motion > assets/js/front/dependencies/build.js",
-    "admin": "browserify -r react -r react-dom -r react-router -r history -r newforms -r newforms-bootstrap -r lodash > assets/js/admin/dependencies/build.js"
+    "front": "browserify -r react -r react-dom -r react-router -r newforms -r newforms-bootstrap -r lodash -r react-motion > assets/js/front/dependencies/build.js",
+    "admin": "browserify -r react -r react-dom -r react-router -r newforms -r newforms-bootstrap -r lodash > assets/js/admin/dependencies/build.js"
   },
   "main": "app.js",
   "repository": {
