--- a/package.json
+++ b/package.json
@@ -6,33 +6,33 @@
   "keywords": [],
   "dependencies": {
     "babelify": "^6.4.0",
-    "ejs": "~0.8.4",
-    "grunt": "0.4.2",
+    "ejs": "~2.4.1",
+    "grunt": "0.4.5",
     "grunt-browserify": "^4.0.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-coffee": "0.13.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-cssmin": "0.9.0",
+    "grunt-contrib-jst": "0.6.0",
+    "grunt-contrib-less": "1.1.0",
+    "grunt-contrib-uglify": "0.7.0",
+    "grunt-contrib-watch": "0.5.3",
     "grunt-react": "^0.12.3",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-sync": "~0.0.4",
+    "grunt-sails-linker": "~0.10.1",
+    "grunt-sync": "0.2.4",
     "include-all": "~0.1.3",
     "lodash": "^3.10.1",
     "newforms": "^0.13.2",
     "newforms-bootstrap": "^2.0.0",
     "passport-local": "^1.0.0",
-    "rc": "~0.5.0",
+    "rc": "~1.1.6",
     "rc-pagination": "latest",
-    "react": "^0.14.3",
-    "react-dom": "^0.14.3",
-    "react-motion": "^0.3.1",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-motion": "^0.4.2",
     "react-router": "^2.0.0",
-    "sails": "github:balderdashy/sails",
+    "sails": "^0.12.1",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^5.0.1",
     "sails-hook-passport": "^0.3.3"
