--- a/package.json
+++ b/package.json
@@ -5,22 +5,15 @@
   "description": "a calendar application with SailsJs and ReactJs",
   "keywords": [],
   "dependencies": {
+    "babel": "^6.3.13",
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
     "babelify": "^6.4.0",
+    "copy-webpack-plugin": "^1.1.1",
     "ejs": "~2.4.1",
-    "grunt": "0.4.5",
-    "grunt-browserify": "^4.0.1",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-coffee": "0.13.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-contrib-cssmin": "0.9.0",
-    "grunt-contrib-jst": "0.6.0",
-    "grunt-contrib-less": "1.1.0",
-    "grunt-contrib-uglify": "0.7.0",
-    "grunt-contrib-watch": "0.5.3",
-    "grunt-react": "^0.12.3",
-    "grunt-sails-linker": "~0.10.1",
-    "grunt-sync": "0.2.4",
     "include-all": "~0.1.3",
     "lodash": "^3.10.1",
     "newforms": "^0.13.2",
@@ -35,14 +28,13 @@
     "sails": "^0.12.1",
     "sails-disk": "~0.10.0",
     "sails-hook-babel": "^5.0.1",
-    "sails-hook-passport": "^0.3.3"
+    "sails-hook-passport": "^0.3.3",
+    "sails-webpack": "^1.0.13",
+    "webpack": "^1.12.9"
   },
   "scripts": {
     "start": "node app.js",
-    "debug": "node debug app.js",
-    "postinstall": "npm run admin && npm run front",
-    "front": "browserify -r react -r react-dom -r react-router -r newforms -r newforms-bootstrap -r lodash -r react-motion > assets/js/front/dependencies/build.js",
-    "admin": "browserify -r react -r react-dom -r react-router -r newforms -r newforms-bootstrap -r lodash > assets/js/admin/dependencies/build.js"
+    "debug": "node debug app.js"
   },
   "main": "app.js",
   "repository": {
@@ -52,6 +44,6 @@
   "author": "Mike wi2",
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^12.0.1"
+    "react-hot-loader": "^1.3.0"
   }
 }
